# livechat-ringcentral-sync

./: .env  .gitignore  AZURE_COSTS.md  AZURE_DEPLOYMENT_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  COSTS.md  LICENSE  QUICKSTART_AZURE.md  README.md  REQUIREMENTS.md  claude_api_cost_2026_02_08_to_2026_02_15.csv  docker-compose.yml  pyproject.toml  setup-azure.ps1  setup-azure.sh
.claude/: settings.local.json
.github/workflows/: azure-deploy.yml
alembic/: env.py
alembic/versions/: .gitkeep  20260212_0257_9b181abbafba_initial_schema.py
app/: config.py  dependencies.py  main.py
app/api/: data.py  health.py
app/api/webhooks/: livechat.py  ringcentral.py
app/core/: agent_state.py  celery_app.py  contact_matching.py  conversation_sync.py  idempotency.py  tasks.py
app/db/: base.py  models.py  session.py
app/integrations/: base_client.py
app/integrations/livechat/: __init__.py  client.py  schemas.py  webhooks.py
app/integrations/ringcentral/: __init__.py  client.py  schemas.py  webhooks.py
app/middleware/: error_handler.py  request_logging.py
app/schemas/: agent.py  api_responses.py  conversation.py  sync.py
app/utils/: logger.py  retry.py
docker/: Dockerfile
frontend/: index.html
frontend/css/: styles.css
frontend/js/: agents.js  api.js  app.js  conversations.js  demo.js  utils.js
scripts/: demo_webhook_trigger.py  seed_data.py  test_webhooks.py
tests/: conftest.py
